[gd_scene load_steps=22 format=2]

[ext_resource path="res://Portraits/auburn01.png" type="Texture" id=1]
[ext_resource path="res://DreamBoard/SelectionCard.gd" type="Script" id=2]
[ext_resource path="res://Fonts/SlackeyFont96.tres" type="DynamicFont" id=3]
[ext_resource path="res://Portraits/FFarmer01.png" type="Texture" id=4]
[ext_resource path="res://Portraits/EarsDude01.png" type="Texture" id=5]
[ext_resource path="res://Portraits/glasses01.png" type="Texture" id=6]
[ext_resource path="res://Portraits/greenHair01.png" type="Texture" id=7]
[ext_resource path="res://Portraits/Heavy02.png" type="Texture" id=8]
[ext_resource path="res://Portraits/FHeavy07.png" type="Texture" id=9]
[ext_resource path="res://Portraits/FFarmer02.png" type="Texture" id=10]
[ext_resource path="res://Portraits/Heavy01.png" type="Texture" id=11]
[ext_resource path="res://Portraits/MAsian01.png" type="Texture" id=12]
[ext_resource path="res://Portraits/FFarmer03.png" type="Texture" id=13]
[ext_resource path="res://Portraits/BeardyDude01.png" type="Texture" id=14]
[ext_resource path="res://Portraits/FHeavy05.png" type="Texture" id=15]
[ext_resource path="res://Portraits/FHeavy06.png" type="Texture" id=16]
[ext_resource path="res://Portraits/FHeavy03.png" type="Texture" id=17]
[ext_resource path="res://Portraits/HeavyDude01.png" type="Texture" id=18]
[ext_resource path="res://Portraits/HoodyDude01.png" type="Texture" id=19]
[ext_resource path="res://Portraits/FHeavy04.png" type="Texture" id=20]
[ext_resource path="res://Portraits/BlondeProf01.png" type="Texture" id=21]

[node name="SelectorCard" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Choose Character"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -10
alignment = 1

[node name="LeftButton" type="Button" parent="HBoxContainer"]
margin_top = 220.0
margin_right = 45.0
margin_bottom = 361.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "<"

[node name="Image" type="TextureRect" parent="HBoxContainer"]
margin_left = 35.0
margin_right = 989.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="RightButton" type="Button" parent="HBoxContainer"]
margin_left = 979.0
margin_top = 220.0
margin_right = 1024.0
margin_bottom = 361.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = ">"

[node name="ImageTabs" type="TabContainer" parent="."]
visible = false
margin_top = 311.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image2" type="TextureRect" parent="ImageTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Image3" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Image4" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="Image5" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Image6" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Image7" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Image8" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Image9" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="Image10" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Image11" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Image12" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="Image13" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Image14" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Image15" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Image16" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Image17" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Image18" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Image19" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Image20" type="TextureRect" parent="ImageTabs"]
visible = false
margin_right = 954.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
